--- a/Resources/Private/Language/bootstrap.xlf
+++ b/Resources/Private/Language/bootstrap.xlf
@@ -1,154 +1,50 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-    <file source-language="en" datatype="plaintext" original="messages" product-name="ws_slider">
-        <header/>
-        <body>
-            <!-- sheets -->
-            <trans-unit id="sheet.bootstrap">
-            	<source>Bootstrap Slider</source>
-            </trans-unit>
-            <trans-unit id="sheet.usability">
-            	<source>Usability</source>
-            </trans-unit>
-            <trans-unit id="sheet.primaryControls">
-            	<source>Primary Controls</source>
-            </trans-unit>
-            <trans-unit id="sheet.secondaryNavigation">
-            	<source>Secondary Navigation</source>
-            </trans-unit>
-            <trans-unit id="sheet.specialProperties">
-            	<source>Special Properties</source>
-            </trans-unit>
-            <trans-unit id="sheet.carousel">
-                <source>Carousel</source>
-            </trans-unit>
-
-            <!-- flexslider general settings -->
-            <trans-unit id="settings.selector" xml:space="preserve">
-                <source>Selector</source>
-            </trans-unit>
-            <trans-unit id="settings.animation" xml:space="preserve">
-                <source>Animation</source>
-            </trans-unit>
-            <trans-unit id="settings.easing" xml:space="preserve">
-            	<source>Easing effect</source>
-            </trans-unit>
-            <trans-unit id="settings.direction" xml:space="preserve">
-            	<source>Direction</source>
-            </trans-unit>
-            <trans-unit id="settings.reverse" xml:space="preserve">
-            	<source>Reverse order</source>
-            </trans-unit>
-            <trans-unit id="settings.animationLoop" xml:space="preserve">
-            	<source>Animation loop</source>
-            </trans-unit>
-            <trans-unit id="settings.smoothHeight" xml:space="preserve">
-            	<source>Smooth height</source>
-            </trans-unit>
-            <trans-unit id="settings.startAt" xml:space="preserve">
-            	<source>Start at</source>
-            </trans-unit>
-            <trans-unit id="settings.slideshow" xml:space="preserve">
-            	<source>Slideshow mode</source>
-            </trans-unit>
-            <trans-unit id="settings.slideshowSpeed" xml:space="preserve">
-            	<source>Slideshow speed (in milliseconds)</source>
-            </trans-unit>
-            <trans-unit id="settings.animationSpeed" xml:space="preserve">
-            	<source>Animation speed (in milliseconds)</source>
-            </trans-unit>
-            <trans-unit id="settings.initDelay" xml:space="preserve">
-            	<source>Init delay in milliseconds</source>
-            </trans-unit>
-            <trans-unit id="settings.randomize" xml:space="preserve">
-            	<source>Random mode</source>
-            </trans-unit>
-            <trans-unit id="settings.fadeFirstSlide" xml:space="preserve">
-            	<source>Fade in first slide</source>
-            </trans-unit>
-
-			<trans-unit id="settings.fade" xml:space="preserve">
-				<source>Fade</source>
-			</trans-unit>
-			<trans-unit id="settings.slide" xml:space="preserve">
-				<source>Slide</source>
+	<file source-language="en" datatype="plaintext" original="messages" product-name="ws_slider">
+		<header/>
+		<body>
+			<!-- sheets -->
+			<trans-unit id="sheet.bootstrap">
+				<source>Bootstrap Slider</source>
 			</trans-unit>
 
-			<!-- Usability Features -->
-			<trans-unit id="settings.pauseOnAction" xml:space="preserve">
-				<source>Pause on action</source>
+			<trans-unit id="settings.interval">
+				<source>Interval</source>
 			</trans-unit>
-			<trans-unit id="settings.pauseOnHover" xml:space="preserve">
-				<source>Pause on hover</source>
+			<trans-unit id="settings.keyboard">
+				<source>Keyboard</source>
 			</trans-unit>
-			<trans-unit id="settings.pauseInvisible" xml:space="preserve">
-				<source>Pause Invisible</source>
+			<trans-unit id="settings.pause">
+				<source>Pause</source>
 			</trans-unit>
-			<trans-unit id="settings.useCSS" xml:space="preserve">
-				<source>User CSS</source>
+			<trans-unit id="settings.ride">
+				<source>Ride</source>
 			</trans-unit>
-			<trans-unit id="settings.touch" xml:space="preserve">
-				<source>Touch mode</source>
+			<trans-unit id="settings.ride.option.carousel">
+				<source>Carousel</source>
 			</trans-unit>
-			<trans-unit id="settings.video" xml:space="preserve">
-				<source>Video mode</source>
+			<trans-unit id="settings.touch">
+				<source>Touch</source>
 			</trans-unit>
-
-			<!-- Primary Controls -->
-			<trans-unit id="settings.controlNav" xml:space="preserve">
-				<source>Navigation Dots</source>
+			<trans-unit id="settings.wrap">
+				<source>Wrap</source>
 			</trans-unit>
-			<trans-unit id="settings.directionNav" xml:space="preserve">
-				<source>Navigation Arrows</source>
+			<trans-unit id="settings.control">
+				<source>Show control</source>
 			</trans-unit>
-
-            <!-- Secondary Navigation -->
-			<trans-unit id="settings.keyboard" xml:space="preserve">
-				<source>Keyboard support</source>
+			<trans-unit id="settings.indicators">
+				<source>Show indicators</source>
 			</trans-unit>
-			<trans-unit id="settings.multipleKeyboard" xml:space="preserve">
-				<source>Allow keyboard navigation to affect multiple sliders</source>
+			<trans-unit id="settings.title">
+				<source>Show title</source>
 			</trans-unit>
-			<trans-unit id="settings.mousewheel" xml:space="preserve">
-				<source>Mousewheel support (requires jquery.mousewheel.js)</source>
+			<trans-unit id="settings.description">
+				<source>Show description</source>
 			</trans-unit>
-			<trans-unit id="settings.pausePlay" xml:space="preserve">
-				<source>Create pause/play dynamic element</source>
+			<trans-unit id="settings.startAt">
+				<source>Start at</source>
 			</trans-unit>
 
-            <!-- Special Properties -->
-			<trans-unit id="settings.controlsContainer" xml:space="preserve">
-				<source>controlsContainer jQuery object/selector</source>
-			</trans-unit>
-			<trans-unit id="settings.manualControls" xml:space="preserve">
-				<source>manualControls jQuery object/selector</source>
-			</trans-unit>
-			<trans-unit id="settings.customDirectionNav" xml:space="preserve">
-				<source>customDirectionNav jQuery object/selector</source>
-			</trans-unit>
-			<trans-unit id="settings.sync" xml:space="preserve">
-				<source>Sync selector: mirror the actions performed on this slider with another slider</source>
-			</trans-unit>
-			<trans-unit id="settings.asNavFor" xml:space="preserve">
-				<source>asNavFor selector</source>
-			</trans-unit>
-
-			<!-- Carousel-->
-			<trans-unit id="settings.itemWidth" xml:space="preserve">
-				<source>Element width in pixels</source>
-			</trans-unit>
-			<trans-unit id="settings.itemMargin" xml:space="preserve">
-				<source>Element border (margin)</source>
-			</trans-unit>
-			<trans-unit id="settings.minItems" xml:space="preserve">
-				<source>Min number of elements</source>
-			</trans-unit>
-			<trans-unit id="settings.maxItems" xml:space="preserve">
-				<source>Max number of elements</source>
-			</trans-unit>
-			<trans-unit id="settings.move" xml:space="preserve">
-				<source>Number of elements, which should be moved in animation</source>
-			</trans-unit>
-        </body>
-    </file>
+		</body>
+	</file>
 </xliff>
