--- a/Resources/Private/Language/owl_csh_flexforms.xlf
+++ b/Resources/Private/Language/owl_csh_flexforms.xlf
@@ -1,162 +1,170 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-    <file source-language="en" datatype="plaintext" original="messages" product-name="ws_slider">
-        <header/>
-        <body>
-            <trans-unit id="owl.settings.js.items.description" xml:space="preserve">
+	<file source-language="en" datatype="plaintext" original="messages" product-name="ws_slider">
+		<header/>
+		<body>
+			<trans-unit id="owl.settings.js.items.description">
 				<source>The number of items you want to see on the screen.</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.responsive.0.items.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.responsive.0.items.description">
 				<source>Items below 576px display width</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.responsive.576.items.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.responsive.576.items.description">
 				<source>Items above 576px display width</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.responsive.768.items.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.responsive.768.items.description">
 				<source>Items above 768px display width</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.responsive.992.items.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.responsive.992.items.description">
 				<source>Items above 992px display width</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.responsive.1200px.items.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.responsive.1200px.items.description">
 				<source>Items above 1200px display width</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.responsive.1400px.items.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.responsive.1400px.items.description">
 				<source>Items above 1400px display width</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.margin.description">
-                <source>margin-right(px) on item.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.loop.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.margin.description">
+				<source>margin-right(px) on item.</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.loop.description">
 				<source>Infinity loop. Duplicate last and first items to get loop illusion.</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.center.description">
-                <source>Center item. Works well with even an odd number of items.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.mouseDrag.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.center.description">
+				<source>Center item. Works well with even an odd number of items.</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.mouseDrag.description">
 				<source>Mouse drag enabled.</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.touchDrag.description">
-                <source>Touch drag enabled.</source>
-            </trans-unit>
-            <!-- <trans-unit id="owl.settings.js.pullDrag.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.touchDrag.description">
+				<source>Touch drag enabled.</source>
+			</trans-unit>
+			<!-- <trans-unit id="owl.settings.js.pullDrag.description">
 				<source>Stage pull to edge.</source>
 			</trans-unit> -->
-            <!-- <trans-unit id="owl.settings.js.freeDrag.description">
-                <source>Item pull to edge.</source>
-            </trans-unit> -->
-            <trans-unit id="owl.settings.js.stagePadding.description" xml:space="preserve">
+			<!-- <trans-unit id="owl.settings.js.freeDrag.description">
+				<source>Item pull to edge.</source>
+			</trans-unit> -->
+			<trans-unit id="owl.settings.js.stagePadding.description">
 				<source>Padding left and right on stage (can see neighbours).</source>
 			</trans-unit>
-            <!-- <trans-unit id="owl.settings.js.merge.description">
-                <source>Merge items. Looking for data-merge='{number}' inside item.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.mergeFit.description" xml:space="preserve">
+			<!-- <trans-unit id="owl.settings.js.merge.description">
+				<source>Merge items. Looking for data-merge='{number}' inside item.</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.mergeFit.description">
 				<source>Fit merged items if screen is smaller than items value.</source>
 			</trans-unit> -->
-            <trans-unit id="owl.settings.js.autoWidth.description">
-                <source>Set non grid content. Try using width style on divs.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.startPosition.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.autoWidth.description">
+				<source>Set non grid content. Try using width style on divs.</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.startPosition.description">
 				<source>Start position or URL Hash string like '#id'.</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.URLhashListener.description">
-                <source>Listen to url hash changes. data-hash on items is required.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.nav.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.URLhashListener.description">
+				<source>Listen to url hash changes. data-hash on items is required.</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.nav.description">
 				<source>Show next/prev buttons.</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.rewind.description">
-                <source>Go backwards when the boundary has reached.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.navElement.description">
-                <source>DOM element type for a single directional navigation link.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.slideBy.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.rewind.description">
+				<source>Go backwards when the boundary has reached.</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.navElement.description">
+				<source>DOM element type for a single directional navigation link.</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.slideBy.description">
 				<source>Navigation slide by x. 'page' string can be set to slide by page.</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.slideTransition.description">
-                <source>You can define the transition for the stage you want to use eg. linear.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.dots.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.slideTransition.description">
+				<source>You can define the transition for the stage you want to use eg. linear.</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.dots.description">
 				<source>Show dots navigation.</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.dotsEach.description">
-                <source>Show dots each x item.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.lazyLoad.description" xml:space="preserve">
-				<source>Lazy load images. data-src and data-src-retina for highres. Also load images into background inline style if element is not &lt;img&gt;</source>
+			<trans-unit id="owl.settings.js.dotsEach.description">
+				<source>Show dots each x item.</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.lazyLoadEager.description">
-                <source>Eagerly pre-loads images to the right (and left when loop is enabled) based on how many items you want to preload.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.autoplay.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.lazyLoad.description">
+				<source>Lazy load images. data-src and data-src-retina for highres. Also load images into background
+					inline style if element is not &lt;img&gt;
+				</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.lazyLoadEager.description">
+				<source>Eagerly pre-loads images to the right (and left when loop is enabled) based on how many items
+					you want to preload.
+				</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.autoplay.description">
 				<source>Autoplay.</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.autoplayTimeout.description">
-                <source>Autoplay interval timeout.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.autoplayHoverPause.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.autoplayTimeout.description">
+				<source>Autoplay interval timeout.</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.autoplayHoverPause.description">
 				<source>Pause on mouse hover.</source>
 			</trans-unit>
-            <!-- <trans-unit id="owl.settings.js.smartSpeed.description">
-                <source>Speed Calculate. More info to come.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.fluidSpeed.description" xml:space="preserve">
+			<!-- <trans-unit id="owl.settings.js.smartSpeed.description">
+				<source>Speed Calculate. More info to come.</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.fluidSpeed.description">
 				<source>Speed Calculate. More info to come.</source>
 			</trans-unit> -->
-            <trans-unit id="owl.settings.js.autoplaySpeed.description">
-                <source>autoplay speed.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.navSpeed.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.autoplaySpeed.description">
+				<source>autoplay speed.</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.navSpeed.description">
 				<source>Navigation speed.</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.dotsSpeed.description">
-                <source>Pagination speed.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.dragEndSpeed.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.dotsSpeed.description">
+				<source>Pagination speed.</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.dragEndSpeed.description">
 				<source>Drag end speed.</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.responsiveRefreshRate.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.responsiveRefreshRate.description">
 				<source>Responsive refresh rate.</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.video.description">
-                <source>Enable fetching YouTube/Vimeo/Vzaar videos.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.videoHeight.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.video.description">
+				<source>Enable fetching YouTube/Vimeo/Vzaar videos.</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.videoHeight.description">
 				<source>Set height for videos.</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.videoWidth.description">
-                <source>Set width for videos.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.animateOut.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.videoWidth.description">
+				<source>Set width for videos.</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.animateOut.description">
 				<source>Class for CSS3 animation out.</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.animateIn.description">
-                <source>Class for CSS3 animation in.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.fallbackEasing.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.animateIn.description">
+				<source>Class for CSS3 animation in.</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.fallbackEasing.description">
 				<source>Easing for CSS2 $.animate.</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.nestedItemSelector.description">
-                <source>Use it if owl items are deep nested inside some generated content. E.g 'youritem'. Dont use dot before class name.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.itemElement.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.nestedItemSelector.description">
+				<source>Use it if owl items are deep nested inside some generated content. E.g 'youritem'. Dont use dot
+					before class name.
+				</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.itemElement.description">
 				<source>DOM element type for owl-item.</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.stageElement.description">
-                <source>DOM element type for owl-stage.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.navContainer.description">
-                <source>Set your own container for nav.</source>
-            </trans-unit>
-            <trans-unit id="owl.settings.js.dotsContainer.description" xml:space="preserve">
+			<trans-unit id="owl.settings.js.stageElement.description">
+				<source>DOM element type for owl-stage.</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.navContainer.description">
 				<source>Set your own container for nav.</source>
 			</trans-unit>
-            <trans-unit id="owl.settings.js.checkVisible.description">
-                <source>If you know the carousel will always be visible you can set `checkVisibility` to `false` to prevent the expensive browser layout forced reflow the $element.is(':visible') does.</source>
-            </trans-unit>
+			<trans-unit id="owl.settings.js.dotsContainer.description">
+				<source>Set your own container for nav.</source>
+			</trans-unit>
+			<trans-unit id="owl.settings.js.checkVisible.description">
+				<source>If you know the carousel will always be visible you can set `checkVisibility` to `false` to
+					prevent the expensive browser layout forced reflow the $element.is(':visible') does.
+				</source>
+			</trans-unit>
 
-        </body>
-    </file>
+		</body>
+	</file>
 </xliff>
